# oxidesfu

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NOTICE  README.md  docker-entrypoint.sh
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docker.yml
crates/oxidesfu-agent/: Cargo.toml
crates/oxidesfu-agent/src/: lib.rs
crates/oxidesfu-api/: Cargo.toml
crates/oxidesfu-api/src/: errors.rs  lib.rs  room_service.rs  router.rs  send_data.rs  state.rs  twirp.rs
crates/oxidesfu-auth/: Cargo.toml
crates/oxidesfu-auth/src/: lib.rs
crates/oxidesfu-core/: Cargo.toml
crates/oxidesfu-core/src/: config.rs  ids.rs  lib.rs
crates/oxidesfu-core/src/config/: livekit_yaml.rs  tests.rs
crates/oxidesfu-protocol/: Cargo.toml
crates/oxidesfu-protocol/src/: lib.rs
crates/oxidesfu-room/: Cargo.toml
crates/oxidesfu-room/src/: errors.rs  lib.rs  participant.rs  room.rs  sip.rs  store.rs
crates/oxidesfu-room/src/node_directory/: memory.rs  mod.rs  policy.rs  redis.rs
crates/oxidesfu-room/src/store/: tests.rs
crates/oxidesfu-rtc/: Cargo.toml
crates/oxidesfu-rtc/src/: data_channel.rs  data_channel_store.rs  error.rs  events.rs  lib.rs  peer_connection.rs  tracks.rs  transport_negotiation.rs  webrtc_adapter.rs
crates/oxidesfu-server/: Cargo.toml
crates/oxidesfu-server/src/: app.rs  cleanup.rs  config.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  profiling.rs  readiness.rs  relay_worker.rs  shutdown.rs  telemetry.rs  turn_auth.rs  turn_runtime.rs  webhook.rs  whip_notify.rs
crates/oxidesfu-server/src/app/: tests.rs
crates/oxidesfu-server/src/turn_auth/: tests.rs
crates/oxidesfu-signaling/: Cargo.toml
crates/oxidesfu-signaling/src/: client_configuration.rs  errors.rs  join.rs  lib.rs  metrics.rs  router.rs  signal_request.rs  socket.rs  state.rs  validate.rs
crates/oxidesfu-signaling/src/data/: channels.rs  mod.rs  packets.rs  tracks.rs
crates/oxidesfu-signaling/src/media/: active_speakers.rs  audio_level.rs  buffer_contracts.rs  codecs.rs  connection_quality.rs  dependency_descriptor_extension.rs  dynacast_manager.rs  forwarder.rs  forwarding_snapshot.rs  frame_integrity.rs  frame_rate.rs  mod.rs  offer.rs  packet_trailer.rs  playout_delay.rs  playout_delay_controller.rs  range_map.rs  redreceiver_contracts.rs  rtcp.rs  rtp_forwarding.rs  rtp_munger.rs  rtp_stats_receiver_restart.rs  rtp_stats_receiver_update.rs  rtp_stats_sender.rs  sequencer.rs  stream_tracker.rs  subscriptions.rs  track_allocation.rs  track_settings.rs  trickle.rs  video_ingress.rs  video_layer_selector.rs  video_layer_utils.rs  vp8_munger.rs
crates/oxidesfu-signaling/src/relay/: dispatcher.rs  intents.rs  mailbox.rs  metrics.rs  mod.rs
crates/oxidesfu-signaling/src/router/: session.rs  tests.rs
crates/oxidesfu-signaling/src/stores/: data_subscriptions.rs  data_tracks.rs  forwarding.rs  media.rs  mod.rs  permissions.rs  signal_connections.rs
crates/oxidesfu-test/: Cargo.toml
crates/oxidesfu-test/browser/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
crates/oxidesfu-test/browser/scripts/: run-firefox.mjs
crates/oxidesfu-test/browser/src/: global.d.ts  main.js
crates/oxidesfu-test/browser/tests/: receiver-counters.spec.ts
crates/oxidesfu-test/fixtures/vp9-svc/: generate.sh  high-keyframe.vp9  low-keyframe.vp9
crates/oxidesfu-test/src/: external_deployment.rs  lib.rs
crates/oxidesfu-test/src/benchmark/: README.md  load.rs
crates/oxidesfu-test/src/cli/: misc.rs  mod.rs  publish.rs  room.rs
crates/oxidesfu-test/src/differential/: core.rs  lite.rs  matrix.rs  mod.rs  normalize.rs
crates/oxidesfu-test/src/distributed/: churn.rs  mod.rs  relay_lifecycle.rs  two_process.rs
crates/oxidesfu-test/src/harness/: go_livekit.rs  livekit_yaml_process.rs  mod.rs  oxidesfu_process.rs  ports.rs  redis.rs  tokens.rs  websocket.rs
crates/oxidesfu-test/src/probes/: data.rs  media.rs  mod.rs  signaling.rs  twirp.rs
crates/oxidesfu-test/src/sdk/: data.rs  media.rs  mod.rs  room.rs  signal_client.rs
crates/oxidesfu-test/src/upstream_livekit/: README.md  agents.rs  harness.rs  mod.rs  multinode.rs  native_rtc.rs  singlenode.rs  webhooks.rs
docs/: dependency-fork-rebase.md  forwarding-performance-plan.md  gaps.md  go-sdk-single-pc-reliable-data-investigation.md  legacy-dual-pc-firefox-data-channel-freeze.md  livekit-configuration-compatibility.md  livekit-upstream-media-data-follow-up.md  profiling.md  provenance.md  rust-sdk-media-unpublish-investigation.md  simulcast-layer-selection-status.md  temporary-forwarding-implementation-handoff.md
docs/personal/: livekit-configuration-compatibility.md
tools/conformance/: README.md  client-sdk-js-full-suite.sh  livekit-cli-full-suite.sh  livekit-full-suite-all.sh  rust-sdks-full-suite.sh  server-sdk-go-full-suite.sh
tools/profiling/: profile-load-test.sh  profile-paired-scale-sweep.sh  test-profile-load-test.sh  test-profile-paired-scale-sweep.sh
