[package]
name = "oxidesfu-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
futures-util = { workspace = true }
livekit-protocol = { workspace = true }
oxidesfu-auth = { workspace = true }
oxidesfu-room = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
