[package]
name = "oxidesfu-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
oxidesfu-auth = { workspace = true }
oxidesfu-room = { workspace = true }
oxidesfu-rtc = { workspace = true }
livekit-protocol = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
jsonwebtoken = { workspace = true }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
