[package]
name = "oxidesfu-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = { workspace = true }
flate2 = { workspace = true }
livekit-protocol = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
