[package]
name = "oxidesfu-rtc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
webrtc = { workspace = true }
rtc = { workspace = true }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }

[dev-dependencies]
