[package]
name = "oxidesfu-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Enables Tokio Console's local task-inspection server. Requires
# `RUSTFLAGS="--cfg tokio_unstable"` when compiling.
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
console-subscriber = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
ipnet = { workspace = true }
oxidesfu-agent = { workspace = true }
oxidesfu-api = { workspace = true }
oxidesfu-auth = { workspace = true }
oxidesfu-core = { workspace = true }
oxidesfu-room = { workspace = true }
oxidesfu-rtc = { workspace = true }
oxidesfu-signaling = { workspace = true }
livekit-protocol = { workspace = true }
md-5 = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
turn-server = { workspace = true }
rtc-stun = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
http-body-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = { workspace = true }
